FIXED: Fix layouting untuk mobile

--- a/index.html
+++ b/index.html
@@ -39,16 +39,17 @@
   <!-- Main Content -->
   <div class="main" role="main">
     <div class="container">
-        <img class="ic-construct" src="./favicon.png"/>
         <div class="ctx">
+            <img class="ic-construct" src="./favicon.png"/>
             <h1><span>Oops!</span>Under Construction</h1>
             <div class="progress-bar" value="75%">
                 <div class="fill-bar"></div>
                 <span>75%</span>
             </div>
             <p class="message">
-                Oh no! We apologize if the site you are visiting cannot be accessed.<br />The page you just visited is currently being repaired, it may be reopened after the repair process is complete.<br />Thank you for visiting.
+                Oh no! We apologize if the site you are visiting cannot be accessed. The page you just visited is currently being repaired, it may be reopened after the repair process is complete. Thank you for visiting.
             </p>
+            <a href="mailto:droidtoms@gmail.com?subject=Business Collaboration Invitation!" class="contact">Contact Me!</a>
         </div>
         <div id="credits"></div>
     </div>
@@ -59,7 +60,7 @@
   <script type="text/javascript" charset="utf-8">
     const now = new Date();
     const credit = document.getElementById('credits');
-    credit.innerHTML = `<p class=""credits>Powered by <a href="#git" target="_blank"><strong>@tomsdroid</strong></a> &copy; ${now.getFullYear()}</p>`;
+    credit.innerHTML = `<p class=""credits>Powered by <a href="https://instagram.com/tomsdroid" target="_blank"><strong>@tomsdroid</strong></a> &copy; ${now.getFullYear()}</p>`;
   </script>
     
   <script src="./assets/js/index.js" type="text/javascript" charset="utf-8"></script>
